--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Create new website with html</title>
-  </head>
+  </head><p></p>
   <body>
-    
+    <h1>Insect eating: The ultimate guide to eating crickets</h1>
+    <p>When you hear about eating insects most people gross out. However,
+      Insects are concidered a delicacy in many parts of the world.
+      Most of the insects eaten are farm grown but in some places, they
+      don' shy away from eating insects collected from the wild.</p>
+    <p>Eating insects is concidered:</p>
+      
+    <ul>
+  <li>healthy since insects have less fat content.</li>
+  <li>Enviromentally friendly: It takes less amount of food/plants to rear insects compared to cows.</li>
+  <li>People who don't eat milk and meat products can try out insects as protein substitute</li>
+    </ul>
+
+<img src="https://avicndugu.github.io/practice-projects-html/cricket-eating/final/img/fried-crickets.jpg" alt="Fried crickets on display">
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/BwC4WRKi5QY" frameborder="0"
+  allow="accelerometer; encyrpted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <br>
+  <a href="https://avicndugu.github.io/practice-projects-html/cricket-eating/final/">HTML and CSS Cricket Project</a>
   </body>
 </html>
